# capstone-rs

./: Cargo.toml  deny.toml  flake.nix
.github/workflows/: ci.yml  nix-flake.check.yml
benchmark/: Cargo.toml  benchmark.rs  build.rs  carsales.rs  catrank.rs  eval.rs
bootstrap/: Cargo.toml  main.rs
capnp/: Cargo.toml
capnp-futures/: Cargo.toml
capnp-futures/src/: lib.rs  read_stream.rs  serialize.rs  serialize_packed.rs  write_queue.rs
capnp-futures/test/: Cargo.toml  build.rs  test.rs
capnp-import/capstone/.github/workflows/: quick-test.yml
capnp-macros/: Cargo.toml  build.rs
capnp-macros/src/: capnp_build.rs  capnp_let.rs  capnproto_rpc.rs  lib.rs  parse.rs  parse_capnp_build.rs  parse_capnp_let.rs
capnp-macros/tests/: build_list_tests.rs  build_struct_tests.rs  decorator_tests.rs  decorator_tests2.rs  legacy_tests.rs  let_tests.rs
capnp-rpc/examples/calculator/: Cargo.toml  client.rs  server.rs
capnp-rpc/examples/hello-world/: Cargo.toml  client.rs  server.rs
capnp-rpc/examples/pubsub/: Cargo.toml  client.rs  server.rs
capnp-rpc/src/: broken.rs  lib.rs  local.rs  queued.rs  reconnect.rs  rpc.rs  rpc_capnp.rs  rpc_twoparty_capnp.rs  sender_queue.rs  task_set.rs  twoparty.rs
capnp-rpc/test/: Cargo.toml  impls.rs  reconnect_test.rs  test.capnp  test.rs  test_util.rs
capnp/src/: any_pointer.rs  any_pointer_list.rs  capability.rs  capability_list.rs  constant.rs  data.rs  data_list.rs  dynamic_list.rs  dynamic_struct.rs  dynamic_value.rs  enum_list.rs  introspect.rs  io.rs  lib.rs  list_list.rs  message.rs  primitive_list.rs  schema.rs  schema_capnp.rs  serialize.rs  serialize_packed.rs  stringify.rs  struct_list.rs  text.rs  text_list.rs  traits.rs
capnp/src/private/: arena.rs  capability.rs  layout.rs  layout_test.rs
capnp/src/serialize/: no_alloc_buffer_segments.rs
capnp/tests/: serialize_read_message_no_alloc.rs
capnpc/: Cargo.toml
capnpc/src/: codegen.rs  codegen_types.rs  lib.rs  pointer_constants.rs
capnpc/test/: Cargo.toml  build.rs  dynamic.rs  test.capnp  test.rs  test_util.rs
capnpc/test-edition-2015/: Cargo.toml
capnpc/test-edition-2018/: Cargo.toml  build.rs
capnpc/test-edition-2021/: Cargo.toml
capnpc/test/external-crate/: Cargo.toml
example/addressbook/: Cargo.toml
example/addressbook_send/: Cargo.toml  build.rs
example/fill_random_values/: Cargo.toml  build.rs  fill_addressbook.rs  fill_shapes.rs
example/fill_random_values/src/: lib.rs
example/wasm-hello-world/: Cargo.toml
example/wasm-hello-world/wasm-app/: Cargo.toml
example/wasm-hello-world/wasm-app/src/: lib.rs
