[package]
name = "capstone-futures"
version.workspace = true
authors = ["David Renshaw <drenshaw@gmail.com>"]
license.workspace = true
description = "async serialization for Cap'n Proto messages"
repository.workspace = true
documentation = "https://docs.rs/capstone-futures/"
edition.workspace = true
readme = "README.md"

keywords = ["async"]

[lib]
name = "capnp_futures"

[dependencies]
capstone.workspace = true
proptest = { version = "1.5", optional = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-stream.workspace = true
futures-util.workspace = true

[dev-dependencies]
capstone = { workspace = true, features = ["proptest"] }
tokio = { workspace = true, features = ["io-util", "rt"] }
proptest = "1.5"

[lints]
workspace = true
