[package]
name = "capstone-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "capnp_macros"
proc-macro = true

[dependencies]
capstone.workspace = true
capstone-rpc.workspace = true
convert_case.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[build-dependencies]
capstone-gen.workspace = true

[dev-dependencies]
# For testing
tokio.workspace = true

[lints]
workspace = true
