[package]
name = "wasm-hello-world"
version = "0.1.0"
edition = "2018"
license = "MIT"

# Avoid getting picked up by parent workspaces.
[workspace]
members = ["."]

[dependencies]
wasmer = { version = "6.0.0", default-features = false, features = [
  "cranelift",
] }

[dependencies.capstone]
path = "../../capnp"

[build-dependencies.capstone-gen]
path = "../../capnpc"
