[package]
name = "wasm-app"
version = "0.1.0"
edition = "2021"

# Avoid getting picked up by parent workspaces.
[workspace]
members = ["."]

[lib]
crate-type = ["cdylib"]

[dependencies.capstone]
path = "../../../capstone"
default-features = false
features = ["unaligned"]

[build-dependencies.capstone-gen]
path = "../../capstone-gen"
